# poloka-sub

./: .gitignore  INSTALL  Makefile.am  README  configure.ac  poloka-sub.pc.in
datacards/: Makefile.am
doc/: Makefile.am
poloka/: Makefile.am  convolution.cc  convolution.h  detection.cc  detection.h  imagepair.cc  imagepair.h  imagesubtraction.cc  imagesubtraction.h  kernelfit.cc  kernelfit.h  kernelfitter.cc  kernelfitter.h  quali_box.cc  quali_box.h  scorescollection.cc  sub.cc  sub.h  subtraction.cc  subtraction.h
tools/: Makefile.am  image_subtract.cc  makesub.cc  pka-imdiff.cc  pka-makesub.cc
